Fixed page cutting off extra content

--- a/personal-site/src/css/home.module.css
+++ b/personal-site/src/css/home.module.css
@@ -1,6 +1,6 @@
 #pageContainer {
   width: 100%;
-  min-height: 100%;
+  min-height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
